@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: time.c,v 1.24.2.3.10.4 2004/03/11 05:58:42 marka Exp $ */
+/* $Id: time.c,v 1.24.2.3.10.5 2008/08/29 04:05:30 marka Exp $ */
 
 #include <config.h>
 
@@ -64,8 +64,11 @@ isc_interval_set(isc_interval_t *i, unsigned int seconds,
 	REQUIRE(i != NULL);
 	REQUIRE(nanoseconds < NS_PER_S);
 
+	/*
+	 * This rounds nanoseconds up not down.
+	 */
 	i->interval = (LONGLONG)seconds * INTERVALS_PER_S
-		+ nanoseconds / NS_INTERVAL;
+		+ (nanoseconds + NS_INTERVAL - 1) / NS_INTERVAL;
 }
 
 isc_boolean_t
